Correct media title and the media thumbnail spacing

--- a/themes/fab/css-1.5.4/style.css
+++ b/themes/fab/css-1.5.4/style.css
@@ -1932,6 +1932,17 @@ dd .deletelink {
 	clear: both;
 }
 
+
+.facts_table .field em {
+	margin-top: 0;
+	font-weight: 600;
+	padding-left: 5px;
+}
+
+.facts_table .field img {
+	vertical-align: middle;
+}
+
 .media-display-image {
 	float: left;
 }
@@ -1948,6 +1959,10 @@ dd .deletelink {
 
 [dir=rtl] .media-display-title {
 	float: right;
+}
+
+[dir=rtl] .facts_table .field em {
+	padding-right: 5px;
 }
 
 /* Album tab */
